# qtwinmigrate

./: CMakeLists.txt  cmd.exe.lnk  defqt.bat  logbuild.txt  make.bat  readme.md  work.md
examples/: readme.md
examples/mfc/: CMakeLists.txt
examples/mfc/step0/: CMakeLists.txt  childview.cpp  mainframe.cpp  qtmfc.aps
examples/mfc/step1/: CMakeLists.txt
examples/mfc/step2/: CMakeLists.txt  step2.pro
examples/mfc/step3/: CMakeLists.txt  step3.pro
examples/mfc/step4/: CMakeLists.txt  step4.pro
examples/mfc/step5/: CMakeLists.txt  mainframe.cpp
examples/qtdll/: main.cpp.md
examples/winhost/: main.cpp.md
examples/winwidget/: main.cpp.md
src/: qmfcapp.cpp.md  qmfcapp.h.md  qwinhost.cpp.md  qwinhost.h.md  qwinwidget.cpp  qwinwidget.cpp.md  qwinwidget.h.md
